--- a/homework/Day_009_outliers_detection.ipynb
+++ b/homework/Day_009_outliers_detection.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +273,7 @@
        "[5 rows x 122 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,6 +283,37 @@
     "print('Path of read in data: %s' % (f_app))\n",
     "app_train = pd.read_csv(f_app)\n",
     "app_train.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0         -9461\n",
+       "1        -16765\n",
+       "2        -19046\n",
+       "3        -19005\n",
+       "4        -19932\n",
+       "          ...  \n",
+       "307506    -9327\n",
+       "307507   -20775\n",
+       "307508   -14966\n",
+       "307509   -11961\n",
+       "307510   -16856\n",
+       "Name: DAYS_BIRTH, Length: 307511, dtype: int64"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "app_train['DAYS_BIRTH']"
    ]
   },
   {
@@ -323,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
@@ -357,7 +388,7 @@
        "Name: DAYS_EMPLOYED, Length: 12574, dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
